change styles on buttons to avoid strange placement of text on wider screens, use flex-box rather than text-align and vertical-align

--- a/app.scss
+++ b/app.scss
@@ -51,8 +51,9 @@ body {
       height: 5em;
       font-size: 1.2em;
       font-weight: bolder;
-      padding-top: 10%;
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       box-sizing: border-box;
     }
     .op {
